--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="styles.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"type="text/javascript"></script>
+  <script src="assets/javascript/jquery-2.2.4.js"type="text/javascript"></script>
   <script src="assets/javascript/custom.js"></script>
   <script src="assets/javascript/functions.js"> </script>
 </head>
