--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 <body>
 	<div class="page_title">
-		<h1> Apply to College </h1>				
+		<h1> Apply to College </h1>		
+		
+		<h1> This would be really cool if it actually works! </h1>				
+				
 	</div>
 	
 	
